--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-This module makes it possible to import OpenImmo-Data into an existing catalog.
+This module makes it possible to import OpenImmo-Data into an existing MetaModel.
 
-The files need to be placed within the folder system/modules/catalog_openimmo/
+The files need to be placed within the folder system/modules/metamodels_openimmo/
